mdapipkg/unpackaged/objects/User_Management__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <label>Agency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHAM - BARDA</fullName>
                </value>
                <value>
                    <fullName>DHGO - CMS</fullName>
                </value>
                <value>
                    <fullName>DHAF - OIG</fullName>
                </value>
                <value>
                    <fullName>DHRA - PSC</fullName>
                </value>
                <value>
                    <fullName>DHRC - CDC</fullName>
                </value>
                <value>
                    <fullName>DHRF - FDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Code__c</fullName>
        <label>Office Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>750401 OFFICE OF INSPECTOR GENERAL</fullName>
                </value>
                <value>
                    <fullName>00100 OS DCG, Washington DC</fullName>
                </value>
                <value>
                    <fullName>75M002 OFFICE OF ACQUISITION AND GRANTS MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>75M001 OFFICE OF ACQUISITION AND GRANTS MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>00NAF CMS NAF CONTRACTS</fullName>
                </value>
                <value>
                    <fullName>00500 00500 CMS, Baltimore, MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>User Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Users Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>